--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.5",
+    "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
+    "form-data": "^4.0.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-csv": "^2.2.2",
@@ -40,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10"
