--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "file-saver": "^2.0.5",
     "form-data": "^4.0.0",
     "papaparse": "^5.4.1",
@@ -21,7 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
