--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "file-saver": "^2.0.5",
     "form-data": "^4.0.0",
+    "googleapis": "^144.0.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-csv": "^2.2.2",
