--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "dev": "react-scripts start",
