--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^18.3.1",
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
